--- a/style.css
+++ b/style.css
@@ -12,26 +12,13 @@ html {
 body {
   margin: 0;
   min-height: 100vh;
+  background: #833ab4;
   background: linear-gradient(
-      45deg,
-      hsla(340, 100%, 55%, 1) 0%,
-      hsla(340, 100%, 55%, 0) 70%
-    ),
-    linear-gradient(
-      135deg,
-      hsla(225, 95%, 50%, 1) 10%,
-      hsla(225, 95%, 50%, 0) 80%
-    ),
-    linear-gradient(
-      225deg,
-      hsla(140, 90%, 50%, 1) 10%,
-      hsla(140, 90%, 50%, 0) 80%
-    ),
-    linear-gradient(
-      315deg,
-      hsla(35, 95%, 55%, 1) 100%,
-      hsla(35, 95%, 55%, 0) 70%
-    );
+    90deg,
+    rgba(131, 58, 180, 1) 0%,
+    rgba(253, 29, 29, 1) 50%,
+    rgba(252, 176, 69, 1) 100%
+  );
 }
 
 h2 {
@@ -45,7 +32,7 @@ nav {
 }
 
 .cool > li > a {
-  color: yellow;
+  color: #f6dfc2;
   text-decoration: none;
   font-size: 20px;
   background: rgba(0, 0, 0, 0.2);
@@ -143,7 +130,7 @@ nav ul {
 
 .dropdown a {
   text-decoration: none;
-  color: #ffc600;
+  color: #ff8000;
 }
 
 a.button {
